--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,7 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+#navbar-search .fa-plus {
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
