--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-sm-3 mb-4">
       <%= link_to post_path(post), class: "text-decoration-none" do %>
         <div class="card" style="width: 18rem; border: none;">
-          <img class="card-img-top" src="https://media.istockphoto.com/id/1060599978/photo/woman-hands-knitting-crochet-hobby-crafts-things-top-view-horizontal-composition.jpg?s=612x612&w=0&k=20&c=p85Xqf4hn6m_96lDwQWmA6OzHxwUE-_suLAWtrZBD0E=" alt="Post image" style="border-radius: 15px; height: 200px; object-fit: cover;">
+          <%= cl_image_tag post.image.key, class: "card-img-top", style: "object-fit: cover; height: 200px; width: 100%; border-bottom: 3px solid #f1f1f1;" %>
           <div class="card-body">
             <div style="display: flex; align-items: center; gap: 10px;">
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRU3BgLYS_VDNdQqhEDiDrx5LkZETFxpNc15Q&s" style="width: 40px; height: 40px; border-radius: 50%;">
