--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
           <div class="card-body">
             <div style="display: flex; align-items: center; gap: 10px;">
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRU3BgLYS_VDNdQqhEDiDrx5LkZETFxpNc15Q&s" style="width: 40px; height: 40px; border-radius: 50%;">
-              <h5 class="card-title" style="font-size: 1.1rem;"><%= post.user.email %></h5> <!-- Updated to reference the user of the post -->
+              <h5 class="card-title" style="font-size: 1.1rem;"><%= post.user.username %></h5>
             </div>
             <p class="card-text" style="font-size: 0.9rem; color: #555;"><%= post.content %></p>
             <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.9rem;">
