--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -12,13 +12,15 @@
                                         <div class="row">
                                             <div class="col-8">
                                                 <div class="d-flex align-items-center">
+                                                <%= link_to chats_path, class: "d-flex align-items-center" do %>
                                                     <span class="chat-icon"><img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/arroleftt.svg" alt="image title"></span>
-                                                    <div class="flex-shrink-0">
-                                                        <img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/user.png" alt="user img">
-                                                    </div>
+                                                <% end %>
+                                                    <%# <div class="flex-shrink-0"> %>
+                                                    <%#   <img class="img-fluid" src="" alt="user img"> %>
+                                                    <%# </div> %>
                                                     <div class="flex-grow-1 ms-3">
-                                                        <h3>Mehedi Hasan</h3>
-                                                        <p>front end developer</p>
+                                                        <h3><%= @chat.title %></h3>
+                                                        <p></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -44,45 +46,12 @@
                                     <div class="modal-body">
                                         <div class="msg-body">
                                             <ul>
-                                                <li class="sender">
-                                                    <p> Hey, Are you there? </p>
-                                                    <span class="time">10:06 am</span>
-                                                </li>
-                                                <li class="sender">
-                                                    <p> Hey, Are you there? </p>
-                                                    <span class="time">10:16 am</span>
-                                                </li>
-                                                <li class="repaly">
-                                                    <p>yes!</p>
-                                                    <span class="time">10:20 am</span>
-                                                </li>
-                                                <li class="sender">
-                                                    <p> Hey, Are you there? </p>
-                                                    <span class="time">10:26 am</span>
-                                                </li>
-                                                <li class="sender">
-                                                    <p> Hey, Are you there? </p>
-                                                    <span class="time">10:32 am</span>
-                                                </li>
-                                                <li class="repaly">
-                                                    <p>How are you?</p>
-                                                    <span class="time">10:35 am</span>
-                                                </li>
-                                                <li>
-                                                    <div class="divider">
-                                                        <h6>Today</h6>
-                                                    </div>
-                                                </li>
-
-                                                <li class="repaly">
-                                                    <p> yes, tell me</p>
-                                                    <span class="time">10:36 am</span>
-                                                </li>
-                                                <li class="repaly">
-                                                    <p>yes... on it</p>
-                                                    <span class="time">junt now</span>
-                                                </li>
-
+                                                <% @messages.each do |message| %>
+                                                  <li class="reply">
+                                                      <p><%= message.content %></p>
+                                                      <span class="time"><%= message.created_at.strftime("%I:%M %p") %></span>
+                                                  </li>
+                                                <% end %>
                                             </ul>
                                         </div>
                                     </div>
@@ -101,16 +70,6 @@
                                                     <span class="label">
                                                         <img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/upload.svg" alt="image title"> attached file
                                                     </span><input type="file" name="upload" id="upload" class="upload-box" placeholder="Upload File" aria-label="Upload File">
-                                                </div>
-
-                                                <select class="form-control" id="exampleFormControlSelect1">
-                                                    <option>Select template</option>
-                                                    <option>Template 1</option>
-                                                    <option>Template 2</option>
-                                                </select>
-
-                                                <div class="add-apoint">
-                                                    <a href="#" data-toggle="modal" data-target="#exampleModal4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewbox="0 0 16 16" fill="none"><path d="M8 16C3.58862 16 0 12.4114 0 8C0 3.58862 3.58862 0 8 0C12.4114 0 16 3.58862 16 8C16 12.4114 12.4114 16 8 16ZM8 1C4.14001 1 1 4.14001 1 8C1 11.86 4.14001 15 8 15C11.86 15 15 11.86 15 8C15 4.14001 11.86 1 8 1Z" fill="#7D7D7D"/><path d="M11.5 8.5H4.5C4.224 8.5 4 8.276 4 8C4 7.724 4.224 7.5 4.5 7.5H11.5C11.776 7.5 12 7.724 12 8C12 8.276 11.776 8.5 11.5 8.5Z" fill="#7D7D7D"/><path d="M8 12C7.724 12 7.5 11.776 7.5 11.5V4.5C7.5 4.224 7.724 4 8 4C8.276 4 8.5 4.224 8.5 4.5V11.5C8.5 11.776 8.276 12 8 12Z" fill="#7D7D7D"/></svg> Appoinment</a>
                                                 </div>
                                             </div>
                                         </div>
