Added css to comments and form under post show

--- a/app/views/comments/create.turbo_stream.erb
+++ b/app/views/comments/create.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.append "comments", partial: "shared/comment", locals: { comment: @comment } %>
+<%= turbo_stream.append "comments", partial: "shared/comments", locals: { comment: @comment } %>
