--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -1,3 +1,19 @@
-<div class="comment">
-  <p><%= comment.content %></p>
-</div>
+<div class="card mb-4">
+  <div class="card-body">
+    <div class="comment">
+      <p><%= comment.content %></p>
+          <div class="d-flex justify-content-between">
+            <div class="d-flex flex-row align-items-center">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp" alt="avatar" width="25"
+                height="25" />
+              <p class="small mb-0 ms-2"> <%= comment.user.username %> </p>
+            </div>
+            <div class="d-flex flex-row align-items-center">
+              <p class="small text-muted mb-0">Upvote?</p>
+              <i class="far fa-thumbs-up mx-2 fa-xs text-body" style="margin-top: -0.16rem;"></i>
+              <p class="small text-muted mb-0">3</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
