--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,54 +1,54 @@
-    <!-- char-area -->
-    <section class="message-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="chat-area">
-                        <!-- chatlist -->
-                        <div class="chatlist">
-                            <div class="modal-dialog-scrollable">
-                                <div class="modal-content">
-                                    <div class="chat-header">
-                                        <div class="msg-search">
-                                            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search" aria-label="search">
-                                            <a class="add" href="#"><img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/add.svg" alt="add"></a>
-                                        </div>
+<section class="message-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="chat-area">
+                    <!-- chatlist -->
+                    <div class="chatlist">
+                        <div class="modal-dialog-scrollable">
+                            <div class="modal-content">
+                                <div class="chat-header">
+                                    <div class="msg-search">
+                                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search" aria-label="search">
+                                        <a class="add" href="#"><img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/add.svg" alt="add"></a>
                                     </div>
+                                </div>
 
-                                    <div class="modal-body">
-                                        <!-- chat-list -->
-                                        <div class="chat-lists">
-                                            <div class="tab-content" id="myTabContent">
-                                                <div class="tab-pane fade show active" id="Open" role="tabpanel" aria-labelledby="Open-tab">
-                                                    <!-- chat-list -->
-                                                    <div class="chat-list">
-                                                        <% @chats.each do |chat| %>
-                                                        <%= link_to chat_path(chat), class: "d-flex align-items-center" do %>
-                                                            <div class="flex-shrink-0">
-                                                                <span class="active"></span>
-                                                            </div>
-                                                            <div class="flex-grow-1 ms-3">
-                                                                <h3><%= chat.title %></h3>
-                                                                <p></p>
-                                                            </div>
-                                                            <hr>
-                                                        <% end %>
-                                                        <% end %>
-                                                    </div>
-                                                    <!-- chat-list -->
+                                <div class="modal-body">
+                                    <!-- chat-list -->
+                                    <div class="chat-lists">
+                                        <div class="tab-content" id="myTabContent">
+                                            <div class="tab-pane fade show active" id="Open" role="tabpanel" aria-labelledby="Open-tab">
+                                                <!-- chat-list -->
+                                                <div class="chat-list">
+                                                    <% @chats.each do |chat| %>
+                                                    <%= link_to chat_path(chat),
+                                                      data: { turbo_frame: :chat_details },
+                                                      class: "d-flex align-items-center" do %>
+                                                        <div class="flex-shrink-0">
+                                                            <span class="active"></span>
+                                                        </div>
+                                                        <div class="flex-grow-1 ms-3">
+                                                            <h3><%= chat.title %></h3>
+                                                            <p></p>
+                                                        </div>
+                                                        <hr>
+                                                    <% end %>
+                                                    <% end %>
                                                 </div>
+                                                <!-- chat-list -->
                                             </div>
-
                                         </div>
-                                        <!-- chat-list -->
+
                                     </div>
+                                    <!-- chat-list -->
                                 </div>
                             </div>
                         </div>
-                        <!-- chatlist -->
-                </div>
+                    </div>
+                    <!-- chatlist -->
             </div>
         </div>
-        </div>
-    </section>
-    <!-- char-area -->
+    </div>
+    </div>
+</section>
