--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,88 +1,88 @@
-    <!-- char-area -->
-    <section class="message-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="chat-area">
-                        <!-- chatbox -->
-                        <div class="chatbox">
-                            <div class="modal-dialog-scrollable">
-                                <div class="modal-content">
-                                    <div class="msg-head">
-                                        <div class="row">
-                                            <div class="col-8">
-                                                <div class="d-flex align-items-center">
-                                                <%= link_to chats_path, class: "d-flex align-items-center" do %>
-                                                    <span class="chat-icon"><img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/arroleftt.svg" alt="image title"></span>
-                                                <% end %>
-                                                    <%# <div class="flex-shrink-0"> %>
-                                                    <%#   <img class="img-fluid" src="" alt="user img"> %>
-                                                    <%# </div> %>
-                                                    <div class="flex-grow-1 ms-3">
-                                                        <h3><%= @chat.title %></h3>
-                                                        <p></p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-4">
-                                                <ul class="moreoption">
-                                                    <li class="navbar nav-item dropdown">
-                                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
-                                                        <ul class="dropdown-menu">
-                                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                            <li>
-                                                                <hr class="dropdown-divider">
-                                                            </li>
-                                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="modal-body">
-                                        <div class="msg-body">
-                                            <ul>
-                                                <% @messages.each do |message| %>
-                                                  <li class="reply">
-                                                      <p><%= message.content %></p>
-                                                      <span class="time"><%= message.created_at.strftime("%I:%M %p") %></span>
+<%= turbo_frame_tag :chat_details do %>
+  <section class="message-area">
+      <div class="container">
+          <div class="row">
+              <div class="col-12">
+                  <div class="chat-area">
+                      <!-- chatbox -->
+                      <div class="chatbox">
+                          <div class="modal-dialog-scrollable">
+                              <div class="modal-content">
+                                  <div class="msg-head">
+                                      <div class="row">
+                                          <div class="col-8">
+                                              <div class="d-flex align-items-center">
+                                              <%= link_to chats_path, class: "d-flex align-items-center" do %>
+                                                  <span class="chat-icon"><img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/arroleftt.svg" alt="image title"></span>
+                                              <% end %>
+                                                  <%# <div class="flex-shrink-0"> %>
+                                                  <%#   <img class="img-fluid" src="" alt="user img"> %>
+                                                  <%# </div> %>
+                                                  <div class="flex-grow-1 ms-3">
+                                                      <h3><%= @chat.title %></h3>
+                                                      <p></p>
+                                                  </div>
+                                              </div>
+                                          </div>
+                                          <div class="col-4">
+                                              <ul class="moreoption">
+                                                  <li class="navbar nav-item dropdown">
+                                                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
+                                                      <ul class="dropdown-menu">
+                                                          <li><a class="dropdown-item" href="#">Action</a></li>
+                                                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                                                          <li>
+                                                              <hr class="dropdown-divider">
+                                                          </li>
+                                                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                                      </ul>
                                                   </li>
-                                                <% end %>
-                                            </ul>
-                                        </div>
-                                    </div>
+                                              </ul>
+                                          </div>
+                                      </div>
+                                  </div>
 
 
-                                    <div class="send-box">
-                                        <form action="">
-                                            <input type="text" class="form-control" aria-label="message…" placeholder="Write message…">
+                                  <div class="modal-body">
+                                      <div class="msg-body">
+                                          <ul>
+                                              <% @messages.each do |message| %>
+                                                <li class="reply">
+                                                    <p><%= message.content %></p>
+                                                    <span class="time"><%= message.created_at.strftime("%I:%M %p") %></span>
+                                                </li>
+                                              <% end %>
+                                          </ul>
+                                      </div>
+                                  </div>
 
-                                            <button type="button"><i class="fa fa-paper-plane" aria-hidden="true"></i> Send</button>
-                                        </form>
 
-                                        <div class="send-btns">
-                                            <div class="attach">
-                                                <div class="button-wrapper">
-                                                    <span class="label">
-                                                        <img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/upload.svg" alt="image title"> attached file
-                                                    </span><input type="file" name="upload" id="upload" class="upload-box" placeholder="Upload File" aria-label="Upload File">
-                                                </div>
-                                            </div>
-                                        </div>
+                                  <div class="send-box">
+                                      <form action="">
+                                          <input type="text" class="form-control" aria-label="message…" placeholder="Write message…">
 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- chatbox -->
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
-    <!-- char-area -->
+                                          <button type="button"><i class="fa fa-paper-plane" aria-hidden="true"></i> Send</button>
+                                      </form>
+
+                                      <div class="send-btns">
+                                          <div class="attach">
+                                              <div class="button-wrapper">
+                                                  <span class="label">
+                                                      <img class="img-fluid" src="https://mehedihtml.com/chatbox/assets/img/upload.svg" alt="image title"> attached file
+                                                  </span><input type="file" name="upload" id="upload" class="upload-box" placeholder="Upload File" aria-label="Upload File">
+                                              </div>
+                                          </div>
+                                      </div>
+
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- chatbox -->
+              </div>
+          </div>
+      </div>
+      </div>
+  </section>
+<% end %>
