--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Posts</h1>
+<%# <% if !user_signed_in? %> %>
+    <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+  <%# <% end %> %>
 
 <div class="row">
   <% @posts.each do |post| %>
