--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="card mb-4">
+<div class="card mb-4 position-relative" id="comment-<%= comment.id %>">
   <div class="card-body">
     <div class="comment">
       <p><%= comment.content %></p>
@@ -9,8 +9,13 @@
               <p class="small mb-0 ms-2"> <%= comment.user.username %> </p>
             </div>
             <div class="d-flex flex-row align-items-center">
-              <p class="small text-muted mb-0">Upvote?</p>
-              <i class="far fa-thumbs-up mx-2 fa-xs text-body" style="margin-top: -0.16rem;"></i>
+              <% if comment.user_id == current_user.id %>
+                <%= link_to '', post_comment_path(comment.post, comment),
+                  data: { turbo_method: 'delete'},
+                  class: 'fas fa-trash mx-2 fa-xs text-body position-absolute',
+                  style: 'margin-top: -0.16rem; top: 30px; right: 10px' %>
+                <% end %>
+              <i class="far fa-heart mx-2 fa-xs text-body" style="margin-top: -0.16rem;"></i>
               <p class="small text-muted mb-0">3</p>
             </div>
         </div>
