routes and controllers for favorite anc notifications

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,13 +3,13 @@
     <%= link_to root_path, class: "nav-link" do %>
       <i class="fa-solid fa-house"></i>
     <% end %>
-    <%= link_to my_bookmarks_path || "#", class: "nav-link" do %>
+    <%= link_to favorites_path|| "#", class: "nav-link" do %>
       <i class="fa-solid fa-bookmark"></i>
     <% end %>
     <%= link_to new_post_path || "#", class: "nav-link", id: "navbar-search" do %>
       <i class="fa-solid fa-plus"></i>
     <% end %>
-    <%= link_to my_notifications_path || "#", class: "nav-link" do %>
+    <%= link_to notifications_path || "#", class: "nav-link" do %>
       <i class="fa-solid fa-bell"></i>
     <% end %>
     <%= link_to my_profile_path || "#", class: "nav-link" do %>
