--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -14,9 +14,14 @@
                   data: { turbo_method: 'delete'},
                   class: 'fas fa-trash mx-2 fa-xs text-body position-absolute',
                   style: 'margin-top: -0.16rem; top: 30px; right: 10px' %>
-                <% end %>
-              <i class="far fa-heart mx-2 fa-xs text-body" style="margin-top: -0.16rem;"></i>
-              <p class="small text-muted mb-0">3</p>
+              <% end %>
+              <div id="comment-<%= comment.id %>-likes" class="d-flex align-items-center">
+                <%= link_to '', comment_comment_likes_path(comment),
+                  data: { turbo_method: 'post'},
+                  class: 'far fa-heart mx-2 fa-xs text-body',
+                  style: 'margin-top: -0.16rem;' %>
+              <p class="small text-muted mb-0"><%= comment.comment_likes.count %></p>
+              </div>
             </div>
         </div>
       </div>
