--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+
     <%= f.input :username,
                 required: true,
                 autofocus: true,
@@ -27,3 +28,10 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+
+
+
+
+<%# <%= f.label :username %> %>
+<%# <%= f.text_field :username, autocomplete: "username", class: "form-control" %> %>
