--- a/app/views/chats/_message.html.erb
+++ b/app/views/chats/_message.html.erb
@@ -1,5 +1,4 @@
 <li
-  class="<%= user && message.user == user ? 'reply' : 'sender' %>"
   id="message-<%= message.id %>"
   data-controller="message"
   data-chat-target="message-content"
@@ -7,6 +6,7 @@
   >
   <div>
    <small class="message-info">
+   <strong>To Test <%= message.user.id %></strong>
     <strong><%= message.user.username %></strong>
     <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
   </small>
