--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,1 +1,20 @@
-<h1>Bookmarks Page</h1>
+<div class="row">
+  <% @favorites.each do |favorite| %>
+    <div class="col-sm-3 mb-4">
+      <a href="<%= post_path(favorite.post) %>" style="text-decoration: none; color: inherit;">
+        <div class="card" style="width: 18rem; border: none;">
+          <%= cl_image_tag favorite.post.image.key, class: "card-img-top", style: "object-fit: cover; height: 200px; width: 100%; border-bottom: 3px solid #f1f1f1;" %>
+          <div class="card-body">
+            <h4 class="card-title text-center" style="font-size: 1.2rem; font-weight: bold; color: #444;">
+              <%= favorite.post.title %>
+            </h4>
+            <div style="display: flex; align-items: center; gap: 10px;">
+              <h5 style="font-size: 1.1rem;"><%= favorite.post.user.username %></h5>
+            </div>
+            <p class="card-text" style="font-size: 0.9rem; color: #555;"><%= favorite.post.content %></p>
+          </div>
+        </div>
+      </a>
+    </div>
+  <% end %>
+</div>
