--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,4 @@
-<h1>
-  <%= @post.title %>
-</h1>
-
-<p> We will rend a post here~~~ </p>
+<%= render "posts/partials/show_post_card" %>
 
 <%= turbo_frame_tag "comments" do %>
   <%= render partial: "shared/comments", locals: { comments: @post.comments, post: @post } %>
