--- a/app/views/posts/partials/_navbar_top_index.html.erb
+++ b/app/views/posts/partials/_navbar_top_index.html.erb
@@ -9,7 +9,7 @@
       <%= link_to notifications_path, class: "nav-link" do %>
         <i class="fa-regular fa-bell fa-lg px-4"></i>
       <% end %>
-      <%= link_to chat_path, class: "nav-link" do %>
+      <%= link_to chats_path, class: "nav-link" do %>
         <i class="fa-regular fa-comment fa-lg px-2"></i>
       <% end %>
     </div>
