started adding video for the post show and new page

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :title, required: true %>
   <%= f.input :content, required: true %>
   <%= f.input :image, as: :file, required: true %>
+  <%= f.input :video, as: :file, required: false %>
   <%= f.submit %>
   <%  %>
 <% end %>
