--- a/app/views/posts/partials/_show_post_card.html.erb
+++ b/app/views/posts/partials/_show_post_card.html.erb
@@ -1,5 +1,6 @@
 <div class="card mx-auto rounded-top" style="width: 24rem; border: none;">
   <%= render 'posts/partials/post_image', post: @post %>
+  <%= render 'posts/partials/show_post_video', post: @post %>
   <div class="card-body text-center">
     <%= render 'posts/partials/post_header', post: @post %>
     <%= render 'posts/partials/post_content', post: @post %>
