--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,9 +9,11 @@
     <%= link_to "#", class: "nav-link", id: "navbar-search" do %>
       <i class="fa-solid fa-plus"></i>
     <% end %>
-    <%= link_to "#", class: "nav-link" do %>
+
+    <%= link_to notifications_path "#", class: "nav-link" do %>
       <i class="fa-solid fa-bell"></i>
     <% end %>
+
     <%= link_to my_profile_path || "#", class: "nav-link" do %>
       <i class="fa-solid fa-user"></i>
     <% end %>
