--- a/app/views/users/partials/_profile_posts.html.erb
+++ b/app/views/users/partials/_profile_posts.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <% @user.posts.each do |post| %>
+    <% user.posts.each do |post| %>
       <div class="col-12 col-md-6 mb-4">
         <!-- Card with fixed height equal to the image height (125px) -->
         <div class="card mx-auto rounded-top border border-secondary shadow-sm" style="width: 100%;">
