--- a/app/views/users/partials/_profile_posts.html.erb
+++ b/app/views/users/partials/_profile_posts.html.erb
@@ -44,7 +44,7 @@
                 </div>
                 <!-- Likes -->
                 <div id="post-<%= post.id %>-likes" class="d-flex align-items-center ms-3">
-                  <%= link_to '', post_post_likes_path(post),
+                  <%= link_to '', toggle_post_post_likes_path(post),
                         data: { turbo_method: 'post' },
                         class: 'far fa-heart fa-xs text-body me-2',
                         style: 'margin-top: -0.16rem;' %>
