--- a/app/views/posts/partials/_post_header.html.erb
+++ b/app/views/posts/partials/_post_header.html.erb
@@ -6,3 +6,9 @@
     <h5 style="font-size: 1.1rem;"><%= post.user.username %></h5>
   </div>
 <% end %>
+<% if user_signed_in? && post.user_id == current_user.id %>
+    <div>
+      <%= link_to "Edit", edit_post_path(post) %>
+      <%= link_to "Delete", post_path(post), data: { turbo_method: :delete } %>
+    </div>
+<% end %>
