--- a/app/views/users/partials/_my_profile_footer.html.erb
+++ b/app/views/users/partials/_my_profile_footer.html.erb
@@ -23,7 +23,10 @@
   <div class="ms-3 p-2 bd-highlight">
     <span>💬 comments</span>
   </div>
-    <% if post.user_id == @user.id %>
-    <%= link_to "Delete", post_path(post), data: { turbo_method: :delete } %>
-  <% end %>
+<% if user_signed_in? && post.user_id == current_user.id %>
+    <div>
+      <%= link_to "Edit", edit_post_path(post) %>
+      <%= link_to "Delete", post_path(post), data: { turbo_method: :delete } %>
+    </div>
+<% end %>
 </div>
