--- a/app/views/posts/partials/_post_footer.html.erb
+++ b/app/views/posts/partials/_post_footer.html.erb
@@ -1,4 +1,5 @@
 <div class="d-flex justify-content-between align-items-center" style="font-size: 0.9rem;">
+
   <div id="favorite-<%= post.id %>">
     <% if post.favorites.where(user: current_user).exists? %>
       <%= link_to '', toggle_favorites_path(post_id: post.id),
@@ -12,20 +13,30 @@
             style: 'margin-top: -0.16rem;' %>
     <% end %>
   </div>
-<div id="post-<%= post.id %>-likes" class="d-flex align-items-center p-2 bd-highlight">
-  <% if post.post_likes.where(user: current_user).exists? %>
-    <%= link_to '', toggle_post_post_likes_path(post),
-          data: { turbo_method: 'post' },
-          class: 'fas fa-heart mx-2 fa-xs text-body text-decoration-none',
-          style: 'margin-top: -0.16rem;' %>
-  <% else %>
-    <%= link_to '', toggle_post_post_likes_path(post),
-          data: { turbo_method: 'post' },
-          class: 'far fa-heart mx-2 fa-xs text-body text-decoration-none',
-          style: 'margin-top: -0.16rem;' %>
-  <% end %>
+
+  <div id="post-<%= post.id %>-likes" class="d-flex align-items-center p-2 bd-highlight">
+    <% if post.post_likes.where(user: current_user).exists? %>
+      <%= link_to '', toggle_post_post_likes_path(post),
+            data: { turbo_method: 'post' },
+            class: 'fas fa-heart mx-2 fa-xs text-body text-decoration-none',
+            style: 'margin-top: -0.16rem;' %>
+    <% else %>
+      <%= link_to '', toggle_post_post_likes_path(post),
+            data: { turbo_method: 'post' },
+            class: 'far fa-heart mx-2 fa-xs text-body text-decoration-none',
+            style: 'margin-top: -0.16rem;' %>
+    <% end %>
+    <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
   </div>
-  <div class="p-2 bd-highlight">
-      <span>💬 comments</span>
+
+  <div data-controller="comments-section">
+    <button type="button"
+            data-action="click->comments-section#toggle"
+            class="btn btn-sm btn-secondary">
+      Comments
+    </button>
+    <div data-comments-section-target="section" class="mt-2 d-none">
+      <%= render "posts/partials/toggle_comment_container", comments: post.comments, post: post %>
+    </div>
   </div>
 </div>
