--- a/app/views/posts/partials/_show_post_footer.html.erb
+++ b/app/views/posts/partials/_show_post_footer.html.erb
@@ -1,19 +1,45 @@
 <div class="d-flex justify-content-between align-items-center" style="font-size: 0.9rem;">
 
   <div data-controller="favorites" data-favorites-id-value="<%= post.id %>">
-    <% if post.favorites.where(user: current_user).present? %>
-      <i class="fa-solid fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+    <% if post.favorites.where(user: current_user).exists? %>
+      <%= link_to '', toggle_favorites_path(post_id: post.id),
+            data: { turbo_method: 'post', turbo_confirm: 'Are you sure?' },
+            class: 'fas fa-bookmark mx-2 text-body text-decoration-none',
+            style: 'margin-top: -0.16rem;' %>
     <% else %>
-      <i class="fa-regular fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+      <%= link_to '', toggle_favorites_path(post_id: post.id),
+            data: { turbo_method: 'post' },
+            class: 'fa-regular fa-bookmark mx-2 text-body text-decoration-none',
+            style: 'margin-top: -0.16rem;' %>
     <% end %>
   </div>
 
+
   <div id="post-<%= post.id %>-likes" class="d-flex align-items-center">
-    <%= link_to '', toggle_post_post_likes_path(post),
-          data: { turbo_method: 'post'},
-          class: 'far fa-heart mx-2 fa-xs text-body',
-          style: 'margin-top: -0.16rem;' %>
+    <% if post.post_likes.where(user: current_user).exists? %>
+      <%= link_to '', toggle_post_post_likes_path(post),
+            data: { turbo_method: 'post' },
+            class: 'fas fa-heart mx-2 fa-xs text-body text-decoration-none',
+            style: 'margin-top: -0.16rem;' %>
+    <% else %>
+      <%= link_to '', toggle_post_post_likes_path(post),
+            data: { turbo_method: 'post' },
+            class: 'far fa-heart mx-2 fa-xs text-body text-decoration-none',
+            style: 'margin-top: -0.16rem;' %>
+    <% end %>
     <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
   </div>
 
+
+  <div data-controller="comments-section">
+    <button type="button"
+            data-action="click->comments-section#toggle"
+            class="btn btn-sm btn-secondary">
+      Comments
+    </button>
+
+    <div data-comments-section-target="section" class="mt-2 d-none">
+      <%= render "shared/comments", comments: post.comments, post: post %>
+    </div>
+  </div>
 </div>
