--- a/app/views/shared/_comment.html.erb
+++ b/app/views/shared/_comment.html.erb
@@ -1,29 +1,44 @@
-<div class="card mb-4 position-relative" id="comment-<%= comment.id %>">
-  <div class="card-body">
-    <div class="comment">
-      <p><%= comment.content %></p>
-          <div class="d-flex justify-content-between">
-            <div class="d-flex flex-row align-items-center">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp" alt="avatar" width="25"
-                height="25" />
-              <p class="small mb-0 ms-2"> <%= comment.user.username %> </p>
-            </div>
-            <div class="d-flex flex-row align-items-center">
-              <% if comment.user_id == current_user.id %>
-                <%= link_to '', post_comment_path(comment.post, comment),
-                  data: { turbo_method: 'delete'},
-                  class: 'fas fa-trash mx-2 fa-xs text-body position-absolute',
-                  style: 'margin-top: -0.16rem; top: 30px; right: 10px' %>
-              <% end %>
-              <div id="comment-<%= comment.id %>-likes" class="d-flex align-items-center">
-                <%= link_to '', comment_comment_likes_path(comment),
-                  data: { turbo_method: 'post'},
-                  class: 'far fa-heart mx-2 fa-xs text-body',
-                  style: 'margin-top: -0.16rem;' %>
-              <p class="small text-muted mb-0"><%= comment.comment_likes.count %></p>
-              </div>
-            </div>
+<div class="card mb-3 position-relative" id="comment-<%= comment.id %>">
+  <div class="card-body p-3">
+    <div class="d-flex">
+      <% if comment.user&.avatar&.attached? %>
+        <%= image_tag comment.user.avatar, alt: comment.user.username, width: 30, height: 30, class: "rounded-circle me-2" %>
+      <% else %>
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp" alt="avatar" width="30" height="30" class="rounded-circle me-2">
+      <% end %>
+      <div class="w-100">
+        <strong class="text-primary"><%= comment.user&.username %></strong>
+        <p class="mb-1"><%= comment.content %></p>
+
+        <div data-controller="reply">
+          <button type="button"
+                  data-action="click->reply#toggle"
+                  class="btn btn-sm btn-link">
+            Reply
+          </button>
+
+          <div data-reply-target="form" class="mt-2 d-none">
+            <%= form_with(model: [comment.post, comment.replies.new], local: false, html: { class: "form-inline" }) do |f| %>
+              <%= f.text_area :content, rows: 2, class: "form-control form-control-sm", placeholder: "Write a reply..." %>
+              <%= f.submit "Reply", class: "btn btn-primary btn-sm mt-1" %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
+    <% if comment.user_id == current_user&.id %>
+      <div class="position-absolute" style="top: 5px; right: 5px;">
+        <%= link_to '', post_comment_path(comment.post, comment),
+              data: { turbo_method: 'delete' },
+              class: 'text-danger fas fa-trash',
+              title: 'Delete Comment' %>
+      </div>
+    <% end %>
+
+    <% if comment.replies.any? %>
+      <div class="ms-4 mt-2">
+        <%= render partial: "posts/partials/toggle_comment", collection: comment.replies.compact , as: :comment %>
+      </div>
+    <% end %>
   </div>
+</div>
