--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
 <body data-current-user-id="<%= current_user ? current_user.id : "" %>">
   <body>
+    <%= render 'posts/partials/navbar_top_index' %>
     <%= yield %>
     <%= render 'shared/navbar' %>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js"></script>
