--- a/app/views/posts/partials/_toggle_comment_container.html.erb
+++ b/app/views/posts/partials/_toggle_comment_container.html.erb
@@ -1,26 +1,24 @@
-<div class="row d-flex justify-content-center">
-  <div class="col-md-8 col-lg-6">
-    <div class="card shadow-0 border" style="background-color: #f0f2f5;">
-      <div class="card-body p-4">
-
-        <div class="comments-list" style="max-height: 150px; overflow-y: auto;">
-          <% comments.each do |comment| %>
-            <%= render "posts/partials/toggle_comment", comment: comment %>
-          <% end %>
+<div class="card border-0 shadow-sm rounded bg-light">
+  <div class="card-body p-4">
+    <!-- Scrollable Comments List -->
+    <div class="comments-list mb-3" style="max-height: 200px; overflow-y: auto;">
+      <% comments.where(parent_id: nil).each do |comment| %>
+          <%= render "posts/partials/toggle_comment", comment: comment %>
+      <% end %>
+    </div>
+    <!-- New Comment Form -->
+    <div>
+      <%= form_with(model: [post, Comment.new], local: false, html: { class: "mt-2", id: "new-comment-form" }) do |f| %>
+        <div class="mb-2">
+          <%= f.text_area :content,
+                          rows: 2,
+                          class: "form-control",
+                          placeholder: "Add a comment..." %>
         </div>
-
-        <div class="mt-3">
-          <%= form_with(model: [post, post.comments.new], local: false, html: { class: "form-outline", id: "new-comment-form" }) do |f| %>
-            <div class="field">
-              <%= f.label :content, "", class: "visually-hidden" %>
-              <%= f.text_area :content, rows: 2, class: "form-control" %>
-            </div>
-            <div class="actions mt-2">
-              <%= f.submit "Comment", class: "btn btn-primary btn-sm" %>
-            </div>
-          <% end %>
+        <div>
+          <%= f.submit "Comment", class: "btn btn-primary btn-sm" %>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
